Improve: 文字列リソースを改善

--- a/app/src/main/res/layout/toast_mute_state.xml
+++ b/app/src/main/res/layout/toast_mute_state.xml
@@ -24,6 +24,6 @@
         android:textAlignment="center"
         android:textSize="14sp"
         android:textStyle="bold"
-        tools:text="@string/un_mute" />
+        tools:text="@string/unmute" />
 
 </LinearLayout>
