--- a/app/src/main/res/layout/list_item_app_info.xml
+++ b/app/src/main/res/layout/list_item_app_info.xml
@@ -31,7 +31,7 @@
         app:autoSizeMaxTextSize="18sp"
         app:autoSizeMinTextSize="16sp"
         app:autoSizeTextType="uniform"
-        app:layout_constraintBottom_toTopOf="@id/package_name"
+        app:layout_constraintBottom_toTopOf="@id/name"
         app:layout_constraintEnd_toStartOf="@id/checkBox"
         app:layout_constraintStart_toEndOf="@id/icon_imageView"
         app:layout_constraintTop_toTopOf="parent"
@@ -39,7 +39,7 @@
         tools:text="ifyg" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/package_name"
+        android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
