--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -12,4 +12,8 @@
         android:id="@+id/nav_select_app"
         android:icon="@drawable/ic_playlist_add_check_black_24dp"
         android:title="@string/select_app" />
+    <item
+        android:id="@+id/nav_select_activity"
+        android:icon="@drawable/ic_playlist_add_check_black_24dp"
+        android:title="@string/select_activity" />
 </menu>
