--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,7 +15,12 @@
         android:label="@string/app_name" />
     <fragment
         android:id="@+id/nav_select_app"
-        android:name="com.github.shiguruikai.automuteapp.fragment.SelectAppFragment"
+        android:name="com.github.shiguruikai.automuteapp.fragment.SelectPackageNameFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_select_app" />
+    <fragment
+        android:id="@+id/nav_select_activity"
+        android:name="com.github.shiguruikai.automuteapp.fragment.SelectActivityFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_select_app" />
 
